--- a/jyln.html
+++ b/jyln.html
@@ -183,7 +183,7 @@ a:active {
 					</tr>
 					<tr>
 						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
-						<a href="https://webmail.rentalserver.jp/" target="blank">
+						<a href="travel.html">
 						<img border="0" src="Images/bg_022_1.jpg" width="210" height="30"></a></td>
 					</tr>
 					</table>
