--- a/travel.html
+++ b/travel.html
@@ -13,7 +13,7 @@ body {
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
-}
+}	
 a:link {
 	text-decoration: none;
 }
@@ -67,7 +67,7 @@ a:active {
 										<img border="0" src="Images/bg_007.gif" width="15" height="13"></td>
 										<td align="left" style="font-size: 10pt">
 										<span lang="JA" style="font-family: MS Mincho">
-										<span title="三協株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.sanxie-inc.com','三協株式会社')">
+										<span title="三協株式会社" style="CURSOR: hand" onclick="window.external.addFavorite('http://www.sanxie-inc.jp','三協株式会社')">
 										<font style="font-size: 9pt" color="#666666">お気に入れ</font></span></td>
 										<td align="left" style="font-size: 10pt">
 										<p align="center">
@@ -75,7 +75,7 @@ a:active {
 										<td align="left" style="font-size: 10pt">
 										<span lang="JA" style="font-family: MS Mincho">
 										<font style="font-size: 9pt" color="#666666">
-										<a href="mailto:welcome@yourfuture.jp">
+										<a href="mailto:sales@sanxie-inc.com">
 										<font color="#666666">問い合わせ</font></a></font></span></td>
 									</tr>
 								</table>
@@ -111,24 +111,16 @@ a:active {
 				<td width="2">
 				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
 				<td>
-				<a href="yg.html">
-				<img src="./Images/bg_005.jpg" onmouseover="src='./Images/bg_005_1.jpg';" onmouseout="src='./Images/bg_005.jpg'" border="0" /></a></td>
+				<img border="0" src="./Images/bg_005.jpg" width="130" height="28"></td>
 				<td width="2">
 				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
-				<td>
-				<a href="akcs.html">
-				<img src="./Images/bg_006.jpg" onmouseover="src='./Images/bg_006_1.jpg';" onmouseout="src='./Images/bg_006.jpg'" border="0" /></a></td>
+				<td><a href="akcs.html"><img src="./Images/bg_006.jpg" onmouseover="src='./Images/bg_006_1.jpg';" onmouseout="src='./Images/bg_006.jpg'" border="0" /></a></td><!--
 				<td width="2">
 				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
-<!--
-				<td>
-				<a href="bnmj.html">
-				<img src="./Images/bg_007.jpg" onmouseover="src='./Images/bg_007_1.jpg';" onmouseout="src='./Images/bg_007.jpg'" border="0" /></a></td>
--->
+				<td><a href="bnmj.html"><img src="./Images/bg_007.jpg" onmouseover="src='./Images/bg_007_1.jpg';" onmouseout="src='./Images/bg_007.jpg'" border="0" /></a></td>-->
 				<td width="1">
 				<img border="0" src="./Images/bg_002.gif" width="2" height="28"></td>
-				<td>
-				<img border="0" src="./Images/bg_008_1.jpg" width="168" height="28"></td>
+				<td><a href="grqb.html"><img src="./Images/bg_008.jpg" onmouseover="src='./Images/bg_008_1.jpg';" onmouseout="src='./Images/bg_008.jpg'" border="0" /></a></td>
 			</tr>
 		</table>
 		</td>
@@ -137,7 +129,7 @@ a:active {
 	<tr>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
 		<td width="980" style="border-top: 1px solid #FFFFFF" height="260" valign="top" align="center">
-			<img src="./Images/company05.jpg" onmouseover="src='./Images/company05.jpg';" onmouseout="src='./Images/company05.jpg'" border="0" /></a>
+			<img src="./Images/travel/travel_003.jpg" onmouseover="src='./Images/travel/travel_003.jpg';" onmouseout="src='./Images/travel/travel_003.jpg'" border="0" width="980" height="350"/></a>
 		</td>
 		<td style="border-top: 1px solid #FFFFFF" height="260">&nbsp;</td>
 	</tr>
@@ -166,7 +158,7 @@ a:active {
 					<tr>
 						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
 						<a href="yg.html">
-						<img border="0" src="./Images/bg_013_1.jpg" width="210" height="30"></a></td>
+						<img border="0" src="./Images/bg_013_1.jpg" width="210" height="30"></td>
 					</tr>
 					<tr>
 						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
@@ -182,7 +174,8 @@ a:active {
 -->
 					<tr>
 						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
-						<img border="0" src="./Images/bg_016.jpg" width="210" height="30"></td>
+						<a href="grqb.html">
+						<img border="0" src="./Images/bg_016_1.jpg" width="210" height="30"></a></td>
 					</tr>
 					<tr>
 						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px; font-size:10pt" valign="top">
@@ -191,7 +184,7 @@ a:active {
 					</tr>
 					<tr>
 						<td style="border-left-width: 1px; border-right-width: 1px; border-top: 1px solid #FFFFFF; border-bottom-width: 1px" valign="top">
-						<a href="travel.html">
+						<a href="test.html">
 						<img border="0" src="Images/bg_022_1.jpg" width="210" height="30"></a></td>
 					</tr>
 					</table>
@@ -238,7 +231,7 @@ a:active {
 							<tr>
 								<td width="16">
 								<img border="0" src="./Images/bg_004.gif" width="16" height="16"></td>
-								<td>&nbsp;<b>個人情報保護ポリシー </b></td>
+								<td>&nbsp;<b>社&nbsp; 員&nbsp; 旅&nbsp; 行</b></td>
 							</tr>
 						</table>
 						</td>
@@ -248,40 +241,14 @@ a:active {
 						<table border="0" width="100%" cellspacing="8" height="100%">
 							<tr>
 								<td valign="top">
-								<p style="line-height: 200%">
-								三協株式会社（以下「弊社」）は、個人情報を適正に取扱い、個人情報の保護を徹底することが社会的責務であると認識し、個人情報保護ポリシーを以下のように定めます。また、全社員がこの責務を認識し、個人情報の保護に取り組んで参ります。<br>
-								<br>
-								<b>■ 個人情報保護方針</b><br>
-								<br>
-								1. 法令遵守<br>
-								弊社は個人情報に関する法令、その他の規範を遵守いたします。 <br>
-								<br>
-								2. 適切な情報管理<br>
-								弊社は、個人情報の漏えい・紛失・改ざん・不正利用に対し最善の予防に努めます。また、全社員に対し個人情報に関する教育訓練を行ない、機密保持の姿勢を徹底いたします。 
-								<br>
-								<br>
-								3. 収集目的と利用範囲<br>
-								弊社は主に、制作、採用、その他のお問合せにお答えするために必要な範囲で個人情報を収集しています。 
-								個人情報の収集の際は、その都度、収集目的を明らかにし、収集した個人情報の使用範囲を限定し、個人情報の保護に努めます。また、お客様へ提供するサービス及び業務の適切な範囲内に限り、お客様の個人情報を利用いたします。 
-								<br>
-								<br>
-								4. 情報の開示と制限<br>
-								弊社は、お客様から個人情報を取得する場合には、利用目的を明示しご承諾をいただいたうえで、その目的達成に必要な範囲で取得させていただきます。お客様が、ご自身の個人情報の開示、訂正、追加または削除などを希望される場合には、合理的な範囲で適切に対応させていただきます。また、個人情報を第三者へ開示する場合は、お客様の同意を得た利用範囲で、厳格な管理の下で取り扱いいたします。ただし、法令等により裁判所、警察等の公的機関から開示を求められた場合には、お客様による同意を得ることなく個人情報を開示または提供することがあります。 
-								<br>
-								<br>
-								5. 個人情報の利用<br>
-								弊社はお客様の個人情報を利用するにあたっては、利用目的の範囲内でのみ利用することとし、その目的の範囲を超えた利用はいたしません。尚、お客様よりいただいた情報について協力会社から利用した場合あります。利用停止をご希望されるお客様は、「個人情報お問い合わせ窓口」までお問い合わせください。<br>
-								6. 社内体制の継続の見直し<br>
-								弊社は個人情報の取扱いに関する規程及びそれを実行するための組織体制について、有効かつ適正な運用が持続的になされるよう継続的な見直しと改善を図ってまいります。<br>
-								<br>
-								7. お問合せについて<br>
-								弊社の個人情報の取り扱いに関するお問合せは、下記連絡先までご連絡くださいませ。<br>
-								<br>
-								<b>■ 連絡先</b><br>
-								三協株式会社<br>
-								〒271-0064　千葉県松戸市上本郷908-2 第三北松戸サンロードス2F<br>
-								TEL: 047-703-7880<br>
-								FAX: 047-703-7880</td>
+									<a href="travel_1.html" target="blank">
+									<img border="0" src="./Images/travel/20161010/001.jpg" width="150" height="100">
+								</td>
+							</tr>
+							<tr height="221">
+								<td valign="top">
+									<a href="travel_1.html" target="blank">鵜原理想郷_2016</a>
+								</td>
 							</tr>
 						</table>
 						</td>
@@ -298,8 +265,8 @@ a:active {
 		<td width="980" height="71">
 		<table border="0" width="100%" height="100%">
 			<tr>
-				<!-- <td width="212" style="font-size: 10pt">&nbsp;</td> -->
-				<td style="font-size: 10pt">
+				<td width="212">&nbsp;</td>
+				<td>
 				<p align="center" style="line-height: 200%">日々成長し続け、お客様に求められているものを提供し続けていきます。<br>
 		Copyright (c) 2016 SAN KYOU Corporation, Inc. All Rights Reserved.</td>
 			</tr>
